fix toaster not stretching full width on lg screens

--- a/src/components/Utils/ConsentToaster.css
+++ b/src/components/Utils/ConsentToaster.css
@@ -5,6 +5,8 @@
   bottom: 0;
   padding: 1rem;
   transition: bottom 250ms ease-out;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .consent-toaster .dismiss-toaster {
